force-app/main/default/objects/FORWARDING_VAT__c/FORWARDING_VAT__c.object-meta.xml
<CustomObject>
    <label>FMS S/O+VAT</label>
    <nameField>
        <displayFormat>FV-{0000000}</displayFormat>
        <label>CONNECT FORWARDING &amp; VAT</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>