force-app/main/default/objects/FORWARDING_VAT__c/fields/DESCRIPTION__c.field-meta.xml
<CustomField>
    <fullName>DESCRIPTION__c</fullName>
    <defaultValue>&quot;Forwarding Service Fee&quot;</defaultValue>
    <inlineHelpText>Input Description when Combining many Invoicing charges into one Shipment Description Line</inlineHelpText>
    <label>DESCRIPTION</label>
    <length>255</length>
    <type>Text</type>
</CustomField>