force-app/main/default/objects/FORWARDING_VAT__c/fields/MBLNumber__c.field-meta.xml
<CustomField>
    <fullName>MBLNumber__c</fullName>
    <formula>FORWARDING__r.MBL_Number_SEA_AIR__c</formula>
    <label>M B/L NUMBER</label>
    <type>Text</type>
</CustomField>