force-app/main/default/objects/FORWARDING_VAT__c/fields/SOJobRequestID__c.field-meta.xml
<CustomField>
    <fullName>SOJobRequestID__c</fullName>
    <formula>FORWARDING__r.JobRequestID__c</formula>
    <label>S/O Job Request ID</label>
    <type>Text</type>
</CustomField>