force-app/main/default/objects/FORWARDING_VAT__c/fields/VAT_INVOICE__c.field-meta.xml
<CustomField>
    <fullName>VAT_INVOICE__c</fullName>
    <inlineHelpText>Filter Type:Required.The user-entered value must match filter criteria.
-VAT Invoice: Locked after Approved equals False.</inlineHelpText>
    <label>VAT INVOICE</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>VAT_INVOICE__c.APPROVED_AND_LOCK__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <infoMessage>Filter Type:Required.The user-entered value must match filter criteria.
-VAT INVOICE: LOCKED AFTER APPROVED equals False.</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>VAT_INVOICE__c</referenceTo>
    <relationshipName>Junction_Object_Forwarding_VAT</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>