force-app/main/default/objects/FORWARDING_VAT__c/fields/VATInvoiceNo__c.field-meta.xml
<CustomField>
    <fullName>VATInvoiceNo__c</fullName>
    <formula>VAT_INVOICE__r.RED_INVOICE_NO__c</formula>
    <label>VAT INVOICE NO</label>
    <type>Text</type>
</CustomField>