force-app/main/default/objects/FORWARDING_VAT__c/fields/VATRollupStatus__c.field-meta.xml
<CustomField>
    <fullName>VATRollupStatus__c</fullName>
    <label>VAT ROLLUP STATUS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RECEIVABLE_PAYABLE_ROLLUP_STATUS</valueSetName>
    </valueSet>
</CustomField>